# pacmanSDL

./: .gitignore  CMakeLists.txt  README.md
materials/: Circle.pixil  Thanks.txt  grid.xcf  plan-0-0-2.md  plan.md
res/: field.pixil  field.txt
src/: background.cpp  background.hpp  cleanup.hpp  consts.hpp  field.cpp  field.hpp  main.cpp  map.cpp  map.hpp  res_path.cpp  res_path.hpp  utils.cpp  utils.hpp
